Revision history for {{$dist->name}}

{{$NEXT}}
  - Add a test to ensure that auto_split works correctly even without auto_trim (Issue: #18)
  - Add a new method named this_line
  - Remove usage of setting method from Multiline.pm

0.917     2019-04-15 22:56:49-07:00 America/Los_Angeles
  - Fixed broken link in pod as reported by CPANTS. #15 (by M Anwar)
  - Fixed a similar broken link in pod as reported in CPANTS for save_record from Autoplit.pm
  - Added a new test to check that when both auto_split and auto_trim are on, auto_trim works first

0.916     2019-04-15 20:12:03-07:00 America/Los_Angeles
  - Minor patches to ensure class doesn't fail due to Syntax::Keyword::Try
  - Added test for one POD example
  - Made exceptions prominent on main POD page
  - Cleaned up CONTRIBUTING.md

0.915     2019-04-14 23:50:51-07:00 America/Los_Angeles
  - Remove exceptions based on Exception::Class and use Throwable::SugarFactory instead
  - Add Text::Parser::Errors. Use exceptions from here in Text::Parser code.
  - Make Dist::Zilla::Plugin::Test::TidyAll required only for the build phase of the distro - close issue #13 on Github
  - Update and improve POD to reference errors in Text::Parser::Errors package
  - Document the errors and make recommendations for error handling in POD
  - Add README.PATCHING, and update CONTRIBUTING.md

0.911     2019-04-11 21:17:53-07:00 America/Los_Angeles
  - Added two new attributes auto_split and FS to split lines into fields
  - Updated POD

0.910     2019-02-10 17:52:24-08:00 America/Los_Angeles
  - Added a new attribute auto_trim and have four different values for it
  - Added a method line_auto_manip that can be overridden in subclasses
  - Enabled rw accessors for multiline_type and auto_chomp attributes
  - Edited SpiceParser-3.t and Text-Parser.t to accommodate test changes

0.903     2019-02-08 20:21:31-08:00 America/Los_Angeles
  - Reduce redundate Moose types, improve code coverage
