@@ -30,14 +30,11 @@ command = auto_split_meth
 [Collect / OVERRIDE IN SUBCLASS]
 command = inherit
 
-[Collect / DON'T OVERRIDE IN SUBCLASS]
-command = dont_touch_method
-
 [Collect / FOR USE IN SUBCLASS]
 command = sub_use_method
 
-[Collect / FOR MULTI-LINE TEXT PARSING]
-command = multiline_method
+[Collect / DON'T OVERRIDE IN SUBCLASS]
+command = dont_touch_method
 
 [Collect / DEPRECATED]
 command = deprecated
