@@ -2,8 +2,10 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
   - Add a test to ensure that auto_split works correctly even without auto_trim (Issue: #18)
-  - Add a new method named this_line
+  - Add a new method named this_line which works in all subclasses (Issue: #20)
   - Remove usage of setting method from Multiline.pm
+  - Refactor code in Text::Parser::Multiline
+  - Re-organize and simplify POD
 
 0.917     2019-04-15 22:56:49-07:00 America/Los_Angeles
   - Fixed broken link in pod as reported by CPANTS. #15 (by M Anwar)
